--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=literalura
 spring.datasource.url=jdbc:postgresql://${DB_HOST}/LiterAlura_db
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
